<resources>
    <string name="app_name">PrvaPomoc</string>
    <string name="action_settings">Settings</string>
    <string name="Log_Reg">Login/Register</string>
    <string name="menu_Logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="metode_zaustavljanja_krvarenja">
        Metode zaustavljanja krvarenja:\n
        - Pokrijte ranu gazom i zavojem. \n
        - Strana tijela zabodena duboko u tkivo nemojte sami vaditi, već ih učvrstite u zatečenom položaju. \n
        - Kod velikih rana na ruci ili nozi potrebna je imobilizacija.\n
        - NE ispirite ranu nikakvim tekućinama. \n
        - NE stavljajte prašak, mast ili kremu na ranu. \n</string>
    <string name="ozljeda_glave">
        - Unesrećenog u nesvjesti okrenite na bok nakon što ste mu imobilizirali vratnu kralježnicu. \n
        - Ne dirajte ranu, ne šišajte kosu! Ranu pokrijte sterlinom gazom i učvrstite rupcem ili zavojem. \n
        - Prijevoz u zdrastvenu ustanovu treba ostvariti u bočnom položaju. \n</string>
    <string name="ozljeda_nosa">
        - Ranu na nosu treba zaviti zavojem koji zovemo "praćka" nosa. \n
        - Osobu postavite u polusjedeći položaj s glavom nagnutom prema naprijed oslonjenom na ruke kojima se osoba naslanja na svoje natkoljenice. \n
        - Čvrsto stisnite meki dio nosa, a stisak popustite nakon 10-15 minuta kako bi provjerili je li krvarenje prestalo. \n
        - Ako krvarenje traje više od 30 minuta, obratite se liječniku. \n</string>
     <string name="pritisak_na_ranu">
        - Komadom gaze ili tkanine čvrsto pritisnite mjesto krvarenja. \n
        - Ako je rana na ruci ili nozi, podignite ozlijeđeni ud i zadržite ga u povišenom položaju. \n
        - Ako je u ranu zabodeno strano tijelo (nož, drvo, strijela), ne smijete ga vaditi. Krvarenje se u tom slučaju zaustavlja pritiskom na rubove rane. \n</string>
    <string name="zaustavljanje_kompresivnim_zavojem">
        - Na ranu stavite sterilnu gazu. \n
        - Na gazu stavite zamotuljak zavoja ili tkanine točno iznad mjesta krvarenja (može posluŽiti komadić drveta ili kamen). \n
        - Kružnim zavojem čvrsto stegnite zamotuljak te čvor napravite iznad zamotuljka. \n
        - Ozlijeđenu ruku ili nogu treba držati u povišenom položaju.
        - Nakon postavljenog zavoja provjeriti perifernu cirkulaciju (boja prstiju, puls). \n</string>
    <string name="zaustavljanje_podvezivanjem_uda">
        - Radikalan zahvat koji dovodi do prekida cirkulacije ispod mjesta podvezivanja što može dovesti do gubitka uda. \n
        - Primjenjuje se samo u slučajevima amputacijske ozljede te kada krvarenje nije moguće zaustaviti niti jednim drugim postupkom. \n
        - Za podvezivanje se koriste namjenski proizvedene široke gumene vrpce te može poslužiti i trokutasta marama. \n
        - Podvezica se stavlja na nadlakticu ili natkoljenicu. \n
        - Zateže se pomoću štapića dok krvarenje ne prestane. \n</string>
    <string name="znakovi_iskrvarenja">
        - Gubitak veće količine krvi dovodi do opće slabost, vrtoglavice, šuma u ušima i iskrenja pred očima(šok). \n
        - Osobu treba staviti u ležeći položaj, po mogućnosti s uzdignutim nogama i rukama (položaj autotransfuzije) i pokriti. \n</string>
    <string name="postupak_iskrvarenja">
        - Unutarnje krvarenje ne može se zaustaviti mjerama prve pomoći. \n
        - Nužan hitan prijevoz u bolnicu, a do toga smjestimo osobu u ravan ležeći položaj. \n
        - Koštane prijelome treba imobilizirati prije prijevoza. \n
        - Osoba ne smije ni jesti ni piti, osim u slučaju produljenog transporta i ako nema ozljede trbuha niti krvarenja iz probavnog sustava. \n</string>
    <string name="sumnja_na_infarkt">
        - Nema sigurnih znakova koji bi jednoznačno ukazivali na srčani udar. \n
        - Najčešći simptomi koji pobuđuju sumnju na srčani infarkt su: \n
        \n
        * bol u prsištu - "pritisak" ili "stezanje". Može se širiti u lijevo (rjeđe) desno rame i ruku, vrat i čeljust. Moguća bol i u gornjem dijelu trbuha \n
        * blijeda i znojem orošena koža \n
        * mučnina i povračanje \n
        \n
        - Važno je znati da ne moraju svi simptomi biti pristuni jer je moguć infarkt i bez bolova. \n</string>
    <string name="postupak_srcani_infarkt">
        1. Bolesnik mora mirovati, najbolje u polusjedećem položaju. Ne dozvolite mu hodanje niti ikakvo naprezanje. \n
        2. Tabletu Aspirina ili Andola od 300 mg usitnite i dajte bolesniku. Osobe koje boluju od angine pektoris trebaju uzeti i svoju uobičajenu terapiju - Nitroglicerin ili Tinidil pod jezik. \n
        3. Pozovite hitnu medicinsku pomoć ili prevezite bolesnika što prije u bolnincu. \n
        4. Ako bolesnik izgubi svijest, provjerite disanje i krvotok i po potrebi započnite mjere oživljavanja. \n</string>
    <string name="znakovi_mozdanog_udara">
        - Slabost ili oduzetost lijeve ili desne polovice tijela, može varirati od slabosti do potpune oduzetosti \n
        - Otežan ili onemogućen govor - bolesnik otežano izgovara riječi ili uopće ne može govoriti \n
        - Spuštenost jednog usnog kuta zbog čega usta izgledaju iskrivljeno \n
        - Otežano ili onemogućeno gutanje - hrana curi iz usta ili kroz nos \n
        - Nejednakost veličine zjenica koja do tada nije postojala \n
        - Jaka glavobolja \n
        - Povraćanje \n
        - Nekontrolirano mokrenje i stolica \n
        - Gubitak svijesti \n</string>
    <string name="postupak_mozdani_udar">
        - Bolesnik treba ležati s lagano uzdignutom glavom i ramenima. Ako počne povraćati, okrenita ga na bok da omogućite istjecanje povraćenog sadržaja iz usta. \n
        - Pozovite hitnu medicinsku pomoć. \n
        - NE dajte bolesniku hranu ili piće. \n
        - Ako je bolesnik bez svijesti, okrenite ga u bočni položaj, provjeravajte disanje i ako zatreba, započnite mjere oživljavanja. \n</string>
    <string name="znakovi_soka">
        - Koža je blijeda i hladna, orošena ljepljivim znojem. \n
        - Usne i prsti mogu biti modri. \n
        - Osjećaj hladnoće. \n
        - Disanje ubrzano i površno. \n
        - Puls je ubrzan i teško opipljiv. \n
        - Žeđ, mučnina i ponekad povraćanje. \n
        - Nemir i uzbuđenost koji s pogoršanjem šoka prelaze u apatiju i nezainteresiranost pa bolesnik više ne zapomaže, pogled mu je odsutan. \n</string>
    <string name="postupak_sok">
        1. Zaustavite krvarenje, previjte rane, imobilizirajte prijelome. \n
        2. Ozljeđenik ili bolesnik u šoku treba ležati s lagano uzdignutim nogama. Pokrijte ga. \n
        3. NE ostavljajte ga samog, nastojte ga ohrabriti i pružiti mu osjećaj sigurnosti. \n
        4. NE dajte mu hranu ni piće. Samo ako je prijevoz do bolnice dugotrajan i ako ste sigurni da nema ozljede trbuha niti krvarenja iz probavnih organam, možete mu povremeno davati manje količini vode ili čaja. \n
        5. NE koristite izvore topline poput termofora ili toplog crijepa za zagrijavanje osobe u šoku. \n</string>
    <string name="simptomi_epilepticni_napad">
        - Jake kontrakcije mišića većeg dijela tijela \n
        - Gubitak svijesti \n
        - Privremeni prestanak disanja i "uzdisanje" \n
        - Inkontinencija urina \n
        - Ugriz za jezik ili obraz \n</string>
    <string name="postupak_epilepticni_napad">
        - Olabavite odjeću oko bolesnikovog vrata. \n
        - Ne pokušavajte zaustaviti pokrete bolesnika ili ga pridržavati tijekom napada, to mu može nanijeti ozljede. \n
        - Ne stavljajte mu nikakve predmete u usta, to ga isto tako može ozlijediti. \n
        - Nakon napada postavite osobu u bočni položaj kako biste osigurali prohodnost dišnog puta i onemogućili udisanje bilo kakvih tjelesnih tekućina. \n
        - Hitnu pomoć je potrebno zvati, ako: \n
        \n\t
        * Napad traje dulje od 5 minuta \n\t
        * Drugi napad počne ubrzo nakon prvog \n\t
        * Osoba nakon napada ne dolazi k svijesti \n\t
        * Postoji sumnja na dodatni zdrastveni poremećaj \n\t
        * Osoba boluje od još neke bolesti npr. neke srčane bolesti ili dijabetesa \n\t</string>
    <string name="znakovi_gusenja">
        - Osoba se uglavnom s obje ruke drži za prednju stranu vrata(univerzalni znak) \n
        - Nemogućnost govora \n
        - Nemogućnost namjerno izazvanog kašlja \n
        - Koža, usne i nokti postaju plavkasti ili tamniji \n
        - Gubitak svijesti \n</string>
    <string name="postupak_gusenje">
        - Unesrećenog 5 puta udarimo korijenom dlana između lopatica, ako to ne pomogne, radimo Heimlichov hvat: \t\n
        1. Unesrećenom pri svijesti priđemo s leđa. \t\n
        2. Stisnutu šaku jedne ruke stavimo na trbuh unesrećenog u sredini udaljenosti između pupka i vrha prsne kosti. \t\n
        3. Drugom rukom prihvatimo stisnutu šaku. \t\n
        4. Učinimo snažan i brz pritisak na trbuh prema sebi i gore. \t\n
        - Naizmjenično izvodimo prethodno navedene postupke do izbacivanja stranog tijela ili do onesvješćivanja unesrećenog. \n
        - Ako izgubi svijest, započnite s postupokom reanimacije. \n
        - Prvu pomoć pružite prije pozivanjaj hitne medicinske pomoći. \n</string>
    <string name="postupak_opekline">
        1. Skinuti odjeću natopljenu vrućom tekućinom ili kemikalijom. Komadi tkanine koji su zalijepljeni za kožu ne smiju se nasilno odvajati, već ih treba obrezati škarama. \n
        2. Brzo hlađenje opečene površine vodom najvažnija je mjera prve pomoći. \n
        3. S opečene ruke odmah treba skinuti prstenje, narukvice i sat, prije nego koža natekne. \n
        4. Opekline se pokrivaju gazom i zavojem vrlo labavo, bez zatezanja. \n
        5. Ako je opečena velika površina ruke ili noge, imobilizirajte ozlijeđeni ud. \n
        6. Ako je prijevoz do bolnicie dugutrajan, dajte ozljeđeniku da pije tekućinu. \n
        7. NE stavljajte na opekline nikakve masti, ulje niti prašak. \n
        8. NE bušite mjehure na opeklinama. \n</string>
    <string name="postupak_strujni_udar">
        1. Ako je unesrećeni još uvijek u strujnom krugu, treba ga što prije osloboditi. \n
        2. Strujni krug se prekida izvačenjem utikača iz utičnice, vađenjem osigurača ili odvajanje električnog vodića od tijela pomoću predmeta od izolirajućeg materijala (plastika, guma). \n
        3. Eventualni požar na licu nezgode se ne smije gasiti vodom. \n
        4. Ako je unesrećeni bez svijesti, provjerite disanje i krvotok i po potrebi započnite mjere oživaljvanja. \n
        </string>
    <string name="simptomi_udar_groma">
        - Različiti poremećaji srčanog ritma \n
        - Srčani zastoj \n
        - Zastoj disanja uzrokovan paralizom mišića za disanje i/ili poremećajem centra za disanje \n
        - Gubitak svijesti, privremena paraliza, koma \n
        - Opekline različita oblika \n
        - Blast ozljede prsnog koša i trbuha, prijelomi kosti, ozljede oka i uha \n
        - Kasnije se mogu javiti različiti psihički i neurološki poremećaji \n</string>
    <string name="korak1">
        Ruke unesrećenog stavite u položaj kao na slici.</string>
    <string name="korak2">
        Koljeno na suprotnoj strani podignite tako da stopalo bude ispruženo na podlozi.</string>
    <string name="korak3">
        Okrenite unesrećenog povlačeći ga za rame i za bok ili natkoljenicu.</string>
    <string name="korak4">
        Gornju nogu povucite prema naprijed i gornju ruku stavite ispod obraza da podržava glavu u zabačenom položaju.</string>
</resources>